[package]
description = "Created with Anchor"
edition = "2018"
name = "anchor-escrow"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_escrow"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
